[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/MainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/BlankSpotsRegular-dB4l.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://levels/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://sfx/sfx100v2_loop_ambient_03.ogg" type="AudioStream" id=4]
[ext_resource path="res://levels/CalibrateMic.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="AudioStreamMicrophone" id=6]

[sub_resource type="DynamicFont" id=7]
size = 128
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainScreen" type="GridContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 128.289
margin_top = -242.752
margin_right = 245.289
margin_bottom = -177.752
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="MainScreen"]
margin_right = 311.0
margin_bottom = 65.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Play"

[node name="CalibrateMic" type="Button" parent="MainScreen"]
margin_top = 69.0
margin_right = 311.0
margin_bottom = 134.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Calibrate Mic"

[node name="MakingOf" type="Button" parent="MainScreen"]
margin_top = 138.0
margin_right = 311.0
margin_bottom = 203.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Making Of"

[node name="Credits" type="Button" parent="MainScreen"]
margin_top = 207.0
margin_right = 311.0
margin_bottom = 272.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Credits"

[node name="Exit" type="Button" parent="MainScreen"]
margin_top = 276.0
margin_right = 311.0
margin_bottom = 341.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsScreen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CreditsScreen"]
margin_left = 33.9795
margin_top = 35.8672
margin_right = 655.979
margin_bottom = 712.867
text = "-Credits-
Game made by Miziziziz

assets:

statue 3d model
by rogerdv
CC BY-SA 3.0 https://creativecommons.org/licenses/by-sa/3.0/
https://opengameart.org/content/gravestones
textures added

furniture models by Ron Kapaun/3TD Studios: https://opengameart.org/content/3td-furniture-pack
key model: https://opengameart.org/content/key-collection
metal gate model: https://opengameart.org/content/simple-jail-door

spiked dungeon door
by bobjh
CC BY 4.0 https://creativecommons.org/licenses/by/4.0/
https://opengameart.org/content/spiked-dungeon-door
no changes made

metal screech, breaths
by Little Robot Sound Factory
CC BY 3.0 https://creativecommons.org/licenses/by/3.0/
https://opengameart.org/content/horror-sound-effects-library
no changes made

footsteps and door sfx by Kenney: https://opengameart.org/content/50-rpg-sound-effects
note textures by Fatih Bilhaq: https://opengameart.org/content/free-note-texture
textures from: https://3dtextures.me

Creeper Monster:
by piacenti
CC BY 3.0 https://creativecommons.org/licenses/by/3.0/
https://opengameart.org/content/creeper
no changes made

more sfx: https://opengameart.org/content/100-cc0-sfx-2
death sounds by HaelDB: https://opengameart.org/content/male-gruntyelling-sounds
death sounds 2 by Vinrax: https://opengameart.org/content/radio-death-sound"

[node name="Back" type="Button" parent="CreditsScreen"]
margin_left = 45.306
margin_top = 760.763
margin_right = 283.306
margin_bottom = 825.763
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalibrateMic" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -20.0
margin_right = 40.0
margin_bottom = 20.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MicrophoneAudioStreamPlayer" type="AudioStreamPlayer" parent="CalibrateMic"]
stream = SubResource( 6 )
autoplay = true
bus = "Record"

[node name="Back" type="Button" parent="CalibrateMic"]
margin_left = 88.5885
margin_top = 110.228
margin_right = 326.589
margin_bottom = 175.228
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalibrateLow" type="Button" parent="CalibrateMic"]
margin_left = 211.703
margin_top = -57.798
margin_right = 326.703
margin_bottom = -2.79797
text = "calibrate low"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="CalibrateMic/CalibrateLow"]
margin_left = -183.131
margin_top = 1.62184
margin_right = -1.13147
margin_bottom = 62.6218
custom_styles/normal = SubResource( 4 )
text = "Stay silent, click button, wait a few seconds"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="CalibrateMic/CalibrateLow"]
margin_left = 130.556
margin_top = 1.62184
margin_right = 312.556
margin_bottom = 62.6218
custom_styles/normal = SubResource( 4 )
text = "current level: 0.0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalibrateHigh" type="Button" parent="CalibrateMic"]
margin_left = 211.703
margin_top = 7.60919
margin_right = 326.703
margin_bottom = 62.6092
text = "calibrate high"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="CalibrateMic/CalibrateHigh"]
margin_left = -183.131
margin_top = 1.62184
margin_right = -1.13147
margin_bottom = 62.6218
custom_styles/normal = SubResource( 4 )
text = "Start screaming into microphone, press button, keep screaming for a few seconds"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="CalibrateMic/CalibrateHigh"]
margin_left = 130.556
margin_top = 1.62184
margin_right = 312.556
margin_bottom = 66.6218
custom_styles/normal = SubResource( 4 )
text = "current level: 0.0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Label" parent="CalibrateMic/CalibrateHigh"]
margin_left = 174.918
margin_top = 25.2186
margin_right = 356.918
margin_bottom = 90.2186
custom_styles/normal = SubResource( 4 )
text = "this must be higher than the one above"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MicrophoneVol" type="Label" parent="CalibrateMic"]
margin_left = 29.3944
margin_top = -102.673
margin_right = 236.394
margin_bottom = -88.6732
text = "current microphone volume: 0.0"

[node name="MicrohponeVolSlider" type="HSlider" parent="CalibrateMic"]
margin_left = 28.0
margin_top = -124.0
margin_right = 680.0
margin_bottom = -108.0
max_value = 1.0
step = 0.0
editable = false
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -902.0
margin_top = 54.0
margin_right = -70.0
margin_bottom = 478.0
custom_fonts/font = SubResource( 7 )
text = "Forlorn Screams of Agony Echoing Forevermore"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Signature" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 28.3162
margin_top = -68.8673
margin_right = 282.316
margin_bottom = -35.8673
custom_fonts/font = ExtResource( 1 )
text = "Created by Miziziziz"

[node name="Controls" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -702.372
margin_top = 516.332
margin_right = -388.372
margin_bottom = 765.332
custom_fonts/font = ExtResource( 1 )
text = "-Controls-
WASD to move
mouse to look
scream to see
Esc to return to main menu
E to use/pick up
R to restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
